--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: deploy
     steps:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
